[package]
name    = "hearthdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name       = "HearthDB"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
minhook  = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
] }
